feat: add register, login, and ping routes
