# src/dto/auth/loginResponse.dto.ts
@@ -1,0 +1,3 @@
+export interface ILoginResponseDto {
+  token: string;
+}
