# src/dto/auth/registerRequest.dto.ts
@@ -1,0 +1,5 @@
+export interface IRegisterRequestDto {
+  name: string;
+  email: string;
+  password: string;
+}
