# src/dto/auth/registerResponse.dto.ts
@@ -1,0 +1,7 @@
+import { Types } from 'mongoose';
+
+export interface IRegisterResponseDto {
+  _id: Types.ObjectId;
+  name: string;
+  email: string;
+}
