# src/dto/messageResponse.dto.ts
@@ -1,0 +1,3 @@
+export interface IMessageResponseDto {
+  message: string;
+}
